<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <Button
        android:id="@+id/button_1"
        android:text="@string/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_3"
        android:layout_toStartOf="@id/button_3" />

    <Button
        android:id="@+id/button_2"
        android:text="@string/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_3"
        android:layout_toEndOf="@id/button_3" />

    <Button
        android:id="@+id/button_3"
        android:text="@string/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/button_4"
        android:text="@string/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_3"
        android:layout_toStartOf="@id/button_3" />

    <Button
        android:id="@+id/button_5"
        android:text="@string/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_3"
        android:layout_toEndOf="@id/button_3" />

</RelativeLayout>