<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/linear_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_layout_weight"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/layout_weight"
        app:layout_constraintLeft_toRightOf="@id/btn_linear_layout"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/relative_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_linear_layout" />

    <Button
        android:id="@+id/btn_relative_layout_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/relative_layout_2"
        app:layout_constraintLeft_toRightOf="@id/btn_relative_layout"
        app:layout_constraintTop_toBottomOf="@id/btn_layout_weight" />

    <Button
        android:id="@+id/btn_frame_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/frame_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_relative_layout" />

    <Button
        android:id="@+id/btn_constraint_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/constraint_layout"
        app:layout_constraintLeft_toRightOf="@id/btn_frame_layout"
        app:layout_constraintTop_toBottomOf="@id/btn_relative_layout_2" />

    <Button
        android:id="@+id/btn_include_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/include_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_frame_layout" />

    <Button
        android:id="@+id/btn_custom_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/custom_layout"
        app:layout_constraintStart_toEndOf="@id/btn_include_layout"
        app:layout_constraintTop_toBottomOf="@id/btn_constraint_layout" />

    <Button
        android:id="@+id/btn_list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/list_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_include_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>